[package]
name = "blog_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["derive"] }
axum = "0.8.4"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
solana-client = "3.0.1"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
